third_party/rust/chromium_crates_io/vendor/cxx-1.0.115/tests/ui/reference_to_reference.stderr
error: C++ does not allow references to references
 --> tests/ui/reference_to_reference.rs:5:23
  |
5 |         fn repro_c(t: &&ThingC);
  |                       ^^^^^^^^

error: C++ does not allow references to references
 --> tests/ui/reference_to_reference.rs:9:23
  |
9 |         fn repro_r(t: &&ThingR);
  |                       ^^^^^^^^
